@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<module type="WEB_MODULE" version="4">
+  <component name="NewModuleRootManager">
+    <content url="file://$MODULE_DIR$" />
+    <orderEntry type="inheritedJdk" />
+    <orderEntry type="sourceFolder" forTests="false" />
+    <orderEntry type="module-library">
+      <library name="PHP">
+        <CLASSES>
+          <root url="file://$MODULE_DIR$/../../src" />
+        </CLASSES>
+        <SOURCES>
+          <root url="file://$MODULE_DIR$/../../src" />
+        </SOURCES>
+      </library>
+    </orderEntry>
+  </component>
+</module>
