@@ -1,0 +1,8 @@
+<component name="ProjectDictionaryState">
+  <dictionary name="hoyinm14mc">
+    <words>
+      <w>multitype</w>
+      <w>unjailed</w>
+    </words>
+  </dictionary>
+</component>
