@@ -19,6 +19,8 @@ enable-penalty: true
 penalty-time: 10
 #How much money per second a player has to pay to bail?
 bail-per-second: 100
+#OPs can't be jailed?
+op-can-be-jailed: true
 
 ### Config updater ###
 #Do not modify this, otherwise plugin may not work properly
